--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -1,8 +1,10 @@
+$marginRightImg: 20px;
+
 .introduction-container {
-    width: 90%;
-    max-width: 1440px;
+    width: 1440px;
     display: flex;
     flex-direction: column;
+    padding-top: 80px;
 
     h2 {
         font-family: Syne;
@@ -34,7 +36,6 @@
         }
     }
 }
-
 
 .button-container {
     display: flex;
@@ -68,7 +69,7 @@
 
 .about-img {
     position: relative;
-    margin-right: 20px;
+    margin-right: $marginRightImg;
 
     &::before {
         content: attr(href);
@@ -76,8 +77,8 @@
         border: 4px solid black;
         top: 20px;
         left: 20px;
-        width: 526px;
-        height: 526px;
+        width: calc(100% - 8px);
+        height: calc(100% - 8px);
         opacity: 0.0;
         transition: opacity 0.19s ease-in-out;
     }
@@ -93,7 +94,15 @@
 }
 
 
+@media (max-width: 1645px) {
+    .introduction-container {
+        width: 1215px;
+    }
+}
+
+
 @media (max-width: 1350px) {
+    $containerWidth: 744px;
 
     .introduction-container {
         align-items: center;
@@ -103,10 +112,11 @@
         justify-content: unset;
         flex-direction: column;
         align-items: center;
+        width: $containerWidth;
     }
 
     .introduction-text {
-        width: 612px !important;
+        width: 100%
     }
 
     .button-container {
@@ -115,20 +125,19 @@
 
     .about-img {
         margin-top: 10%;
-        margin-right: 0px;
-
-        &::before {
-            width: 100%;
-            height: 100%;
-        }
+        width: calc($containerWidth - $marginRightImg );
+        height: calc($containerWidth - $marginRightImg);
 
         img {
-            height: 590px;
+            width: 100%;
+            height: auto;
         }
     }
 }
 
+
 @media (max-width: 1024px) {
+    $containerWidth: 712px;
 
     .button-container {
         display: none;
@@ -158,7 +167,14 @@
         }
     }
 
+    .introduction-info {
+        width: $containerWidth;
+    }
+
     .about-img {
+        width: calc($containerWidth - $marginRightImg );
+        height: calc($containerWidth - $marginRightImg);
+
         &::before {
             opacity: 1.0;
             animation: pulse-img 3s infinite ease-in-out;
@@ -184,7 +200,23 @@
     }
 }
 
-@media (max-width: 690px) {
+
+@media (max-width: 850px) {
+    $containerWidth: 600px;
+
+    .introduction-info {
+        width: $containerWidth;
+    }
+
+    .about-img {
+        width: calc($containerWidth - $marginRightImg );
+        height: calc($containerWidth - $marginRightImg);
+    }
+}
+
+
+@media (max-width: 700px) {
+    $containerWidth: 455px;
 
     .introduction-container {
         h2 {
@@ -192,21 +224,21 @@
         }
     }
 
-    .introduction-text {
-        width: 355px !important;
+    .introduction-info {
+        width: $containerWidth;
     }
 
-    .about-img {
 
-        img {
-            // height: 355px;
-            width: 99%;
-            height: auto;
-        }
+    .about-img {
+        margin-top: 10%;
+        width: calc($containerWidth - $marginRightImg );
+        height: calc($containerWidth - $marginRightImg);
     }
 }
 
-@media (max-width: 400px) {
+
+@media (max-width: 550px) {
+    $containerWidth: 370px;
 
     .introduction-container {
         h2 {
@@ -214,14 +246,36 @@
         }
     }
 
-    .introduction-text {
-        width: 280px !important;
+    .introduction-info {
+        width: $containerWidth;
     }
 
-    .about-img {
 
-        img {
-            height: 280px;
+    .about-img {
+        margin-top: 10%;
+        width: calc($containerWidth - $marginRightImg );
+        height: calc($containerWidth - $marginRightImg);
+    }
+}
+
+
+@media (max-width: 450px) {
+    $containerWidth: 280px;
+
+    .introduction-container {
+        h2 {
+            font-size: 32px;
         }
+    }
+
+    .introduction-info {
+        width: $containerWidth;
+    }
+
+
+    .about-img {
+        margin-top: 10%;
+        width: calc($containerWidth - $marginRightImg );
+        height: calc($containerWidth - $marginRightImg);
     }
 }
