--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -4,7 +4,7 @@ $font-sice-nav: 96px;
 
 
 .nav-container {
-    width: calc( 100vw - 12px );
+    width: 100%;
     display: flex;
     justify-content: center;
     height: 92px;
