--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@ app-navbar {
     position: fixed;
     top: 0;
     z-index: 99;
+    width: 100%;
 }
 
 app-legal-notice,
@@ -9,5 +10,5 @@ app-privacy-policy,
 app-footer {
     display: flex;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
 }
