--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -16,7 +16,7 @@
                     If you think I'd be a good match for your projects, contact me!
                 </span>
             </div>
-            <div class="button-container" (click)="scrollToArea('contactSection')">
+            <div class="button-container" [routerLink]="['/']" fragment="contactSection" (click)="scrollToArea('contactSection')">
                 <button>
                     Let's talk
                 </button>
