--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -4,12 +4,12 @@ $marginRightImg: 20px;
     width: 1440px;
     display: flex;
     flex-direction: column;
-    padding-top: 80px;
 
     h2 {
         font-family: Syne;
         font-size: 78px;
         font-weight: 800;
+        margin-top: 0px;
 
         &:hover {
             transition: color 0.190s ease-in-out;
