--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -1,6 +1,6 @@
 .contact-container {
     width: 100%;
-    background-color: #FFFCF3;
+    background-color: #000000;
     display: flex;
     flex-direction: column;
     clip-path: polygon(0% 0%, 100% 15%, 100% 100%, 0% 100%);
