--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -9,11 +9,11 @@
       <div id="countResponsiv" [class.count]="i % 2 === 0" [class.count-reverse]="i % 2 === 1">
         0{{ i + 1 }}/0{{ items.length }}
       </div>
-      <div [class.image]="i % 2 === 0" [class.image-reverse]="i % 2 === 1">
+      <a [class.image]="i % 2 === 0" [class.image-reverse]="i % 2 === 1" href="{{ item.projectLink }}" target="_blank">
         <img class="preview-img" src="{{ item.image }}" alt="Bild {{ i + 1 }}">
         <img [class.pointer]="i % 2 === 0" [class.pointer-reverse]="i % 2 === 1"
           src=".\assets\img\portfolio-img\pointer.png" alt="">
-      </div>
+      </a>
       <div [class.text]="i % 2 === 0" [class.text-reverse]="i % 2 === 1">
         <div id="count" [class.count]="i % 2 === 0" [class.count-reverse]="i % 2 === 1">
           0{{ i + 1 }}/0{{ items.length }}
