--- a/src/app/main-content/portfolio/portfolio.component.scss
+++ b/src/app/main-content/portfolio/portfolio.component.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 80px;
 }
 
 .portfolio-header {
@@ -16,7 +15,7 @@
     font-family: Syne;
     font-size: 78px;
     font-weight: 800;
-    margin: 20px 0 35px 0;
+    margin: 0 0 35px 0;
     align-items: center;
 
     &:hover {
@@ -96,6 +95,7 @@
 .image-base {
   width: 50%;
   position: relative;
+  cursor: pointer;
 
   &::before {
     content: attr(href);
@@ -272,7 +272,6 @@
   .portfolio-header {
 
     h2 {
-      margin: 20px 0 35px 0;
       animation: pulse 3s infinite ease-in-out;
     }
   }
