--- a/src/app/main-content/arrow2/arrow2.component.html
+++ b/src/app/main-content/arrow2/arrow2.component.html
@@ -1,7 +1,7 @@
 <div class="arrow-container">
     <div [class.arrowAnimation-Container]="arrowTrigger2" class="arrow"> 
-        <div [class.arrow-animation]="arrowTrigger2" class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+        <div [class.arrow-animation]="arrowTrigger2" class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
     </div>
 </div>
