--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -176,6 +176,7 @@
                 justify-content: center;
                 align-items: center;
                 margin-right: 10px;
+                flex: 0 0 auto;
 
                 &:hover {
                     background-color: #00BC8F;
