--- a/src/app/main-content/portfolio/portfolio.component.scss
+++ b/src/app/main-content/portfolio/portfolio.component.scss
@@ -98,7 +98,7 @@
   cursor: pointer;
 
   &::before {
-    content: attr(href);
+    content: "";
     position: absolute;
     border: 4px solid black;
     width: 100%;
