--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,17 +8,17 @@
             <div class="links">
                 <a class="link1" href="https://github.com/Pesendorfer90" target="_blank">
                     <img src="./assets/img/github.png" id="link1" (mouseenter)="onMouseEnter('link1')"
-                        (mouseleave)="onMouseOut('link1')"
+                        (mouseleave)="onMouseOut('link1')" (touchend)="onMouseOut('link1')" (touchcancel)="onMouseOut('link1')"
                         [ngClass]="{'hover-link': linkAnimationStates['link1']?.enter, 'reset-link': linkAnimationStates['link1']?.leave}">
                 </a>
                 <a class="link2" (click)="scrollToArea('contactSection')">
                     <img src="./assets/img/email.png" id="link2" (mouseenter)="onMouseEnter('link2')"
-                        (mouseleave)="onMouseOut('link2')"
+                        (mouseleave)="onMouseOut('link2')" (touchend)="onMouseOut('link2')" (touchcancel)="onMouseOut('link2')"
                         [ngClass]="{'hover-link': linkAnimationStates['link2']?.enter, 'reset-link': linkAnimationStates['link2']?.leave}">
                 </a>
                 <a class="link3" href="https://www.linkedin.com/in/gerald-pesendorfer-432091246/" target="_blank">
                     <img src="./assets/img/linkedin.png" id="link3" (mouseenter)="onMouseEnter('link3')"
-                        (mouseleave)="onMouseOut('link3')"
+                        (mouseleave)="onMouseOut('link3')" (touchend)="onMouseOut('link3')" (touchcancel)="onMouseOut('link3')"
                         [ngClass]="{'hover-link': linkAnimationStates['link3']?.enter, 'reset-link': linkAnimationStates['link3']?.leave}">
                 </a>
             </div>
